hphp/test/zend/good/ext/standard/tests/strings/bug36392.php
<?php
	echo sprintf("%e\n", 1.123456789);
	echo sprintf("%.10e\n", 1.123456789);
	echo sprintf("%.0e\n", 1.123456789);
	echo sprintf("%.1e\n", 1.123456789);
	echo sprintf("%5.1e\n", 1.123456789);
?>